eks-deployments/workload/ingress/01-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictactoe-ingress
  namespace: workload
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tictactoe
            port:
              number: 80
      - path: /solar-system
        pathType: Prefix
        backend:
          service:
            name: solar-system
            port:
              number: 3000
